Fix bug layout when text too long

--- a/src/components/ChatInput.scss
+++ b/src/components/ChatInput.scss
@@ -5,6 +5,7 @@
 
   .input {
     padding: 18px;
+    padding-right: 142px;
     width: 100%;
     font-size: 15px;
     font-weight: 300;
