--- a/src/components/Message.scss
+++ b/src/components/Message.scss
@@ -22,6 +22,11 @@
     font-weight: 300;
     line-height: 23px;
 
+    // Break word if text too long
+    word-wrap: normal;
+    word-break: break-all;
+    white-space: normal;
+
     & + & {
       margin-top: 8px;
     }
